--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "author": "xiawang1024",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core":"^7.9.0",
+    "@babel/preset-env":"^7.9.5",
+    "@babel/plugin-transform-runtime":"^7.9.0",
     "autoprefixer":"^9.7.6",
     "postcss-import":"^12.0.1",
     "postcss-url":"^8.0.0",
